--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <div class="box">
             <img src="images/p-1.jpg" alt="">
             <div class="content">
-                <h3> <i class="fas fa-map-marker-alt"></i> mumbai </h3>
+                <h3> <i class="fas fa-map-marker-alt"></i> India </h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, nam!</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -177,7 +177,7 @@
         <div class="box">
             <img src="images/p-2.jpg" alt="">
             <div class="content">
-                <h3> <i class="fas fa-map-marker-alt"></i> hawaii </h3>
+                <h3> <i class="fas fa-map-marker-alt"></i> Bangladesh </h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, nam!</p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
@@ -588,7 +588,7 @@
 
     </div>
 
-    <h1 class="credit"> created by <span> mr. web designer </span> | all rights reserved! </h1>
+    <h1 class="credit"> created by <span> Rakibu Hasan </span> | all rights reserved! </h1>
 
 </section>
 
